--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <button id="commentBtn">Add</button>
     </div>
 
-    <div class="commentBox"></div>
+    <div id="commentBox"></div>
     </form>
     <script src="script.js"></script>
 </body>
